added padding to the header section

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ p{
 
 header{
     background: url('images/bg-hero-desktop.svg') no-repeat var(--secondary-1);
+    padding: 1rem;
 }
 
 @media screen and (max-width: 550px) {
