--- a/style.css
+++ b/style.css
@@ -199,6 +199,8 @@ header{
         color: white;
         padding: 6rem 0 4rem 2rem;
         line-height: 1.5;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
     }
 
     .address{
